--- a/.github/workflows/BuildAndRunTests.yml
+++ b/.github/workflows/BuildAndRunTests.yml
@@ -1,6 +1,6 @@
 name: Build-And-Run-Tests
 run-name: "${{github.actor}}: ${{github.event.head_commit.message}}"
-on: [push]
+on: [push, workflow_dispatch]
 jobs:
     Build-And-Test:
         runs-on: windows-latest
